config/unifi/unifi-controller-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi
  namespace: unifi

spec:
  selector:
    app: unifi

  ports:
    - name: https
      port: 8443
      targetPort: 8443

  type: ClusterIP
