config/unifi/unifi-controller-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unifi
  namespace: unifi

  annotations:
    kubernetes.io/ingress.class: traefik

spec:
  rules:
    - host: unifi.colins.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: unifi
                port:
                  number: 8080

  tls:
    - hosts:
        - unifi.colins.io
      secretName: wildcard-colins-io-tls
